--- a/playbook.yml
+++ b/playbook.yml
@@ -9,7 +9,7 @@
   vars_files:
     - ansible-role-gitlab/vars/main.yml
   roles:
-    - ansible-role-gitlab
+    - gitlab
   pre_tasks:
     - name: Update apt-get repo and cache
       apt: update_cache=yes force_apt_get=yes cache_valid_time=3600
